<resources>
    <string name="app_name">Eh-Ho</string>
    <string name="label_topics">Topics</string>
    <string name="label_login">Login</string>
    <string name="label_create_new_account">Create new account</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_log_in">Log in</string>
    <string name="label_sign_up">Sign up</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_email">Email</string>
    <string name="label_sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="hint_author">Author</string>
    <string name="label_send">Send</string>
    <string name="error_empty">This field cannot be empty</string>
    
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>

    <string name="minutes_zero">Just now</string>
    <string name="label_loading">Loading</string>
    <string name="label_logout">Logout</string>
    <string name="error_not_registered">User not registered</string>
    <string name="error_not_internet">Not internet conexion</string>
    <string name="error_default">Something bad happened</string>
    <string name="message_sign_up">Please check your email to finish the process</string>
    <string name="error_duplicated_topic">Title has been already used</string>
    <string name="label_creating_topic">Creating topic</string>
    <string name="error_password_different">Both password fields does not match</string>
    <string name="error_no_valid_email">Please enter correct email</string>
    <string name="message_bad">Oops something bad happened</string>
    <string name="button_retry">retry</string>
    <string name="hint_post_text">Post text</string>
    <string name="actionAddPost">New post</string>
    <string name="action_send_new_post">Send</string>
</resources>