<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputEmail"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputUser"
        android:hint="@string/hint_username"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputPassword"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputConfirmPassword"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp"
        android:text="@string/label_sign_up"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="16dp"
        android:textColor="#fff"
        app:backgroundTint="@color/colorPrimary"/>

    <TextView
        android:id="@+id/labelLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_sign_in"
        android:textAllCaps="true"/>

</LinearLayout>